fix some minor issue

--- a/profil.html
+++ b/profil.html
@@ -28,7 +28,7 @@
     }
 
     body::-webkit-scrollbar-thumb {
-      background-color: #846c5b;
+      background-color: #FFB703;
     }
 
     .scrolled {
@@ -126,19 +126,18 @@
       <div class="container"
         style="min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="row">
-          <h2 style="color: #fff; padding: 50px;">Teknik Informatika Universitas Muhammadiyah Jember</h2>
+          <h2 style="color: #f8f8f8; padding: 50px;">Deskripsi singkat</h2>
         </div>
         <div class="row">
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-            <img src="assets/img/logo.png" alt="" style="max-height: 300px;">
+            <img src="assets/img/logo.png" alt="" style="max-height: 300px; padding: 30px;">
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores iste officia magni, a
-              excepturi minima facilis, doloribus deleniti blanditiis reprehenderit quisquam nostrum vero! Facere
+            <p class="desc" style="color: #f8f8f8;">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span style="color: #FFB703;">Asperiores iste officia magni, a </span> excepturi minima facilis, doloribus deleniti blanditiis reprehenderit quisquam nostrum vero! Facere
               accusamus dolorum in voluptatem eveniet sequi. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Sequi dolore facilis mollitia delectus, excepturi totam nobis unde sit consectetur numquam reiciendis,
+              Sequi dolore facilis mollitia delectus, <span style="color: #FFB703;">excepturi totam nobis unde sit consectetur numquam reiciendis, </span>
               voluptas temporibus laudantium explicabo repellat, molestiae incidunt! Illo, quia? Lorem ipsum dolor sit
               amet consectetur adipisicing elit. Accusamus, voluptatum blanditiis minima molestiae ducimus natus omnis
               autem alias facilis nobis provident doloribus suscipit aspernatur tempore beatae a rerum. Nobis, voluptas.
@@ -212,7 +211,7 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
     </svg>
     <!-- visi misi -->
-    <section style="background-color: #0d47a1; margin-top: -10px;">
+    <section style="background-color: #0d47a1; margin-top: -10px; color: #f8f8f8;">
       <div class="container"
         style="min-height: 50vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="row">
@@ -220,7 +219,7 @@
         </div>
         <div class="row">
           <div class="col-md-6"
-            style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px">
+            style="display: flex; justify-content: flex-start; align-items: center; flex-direction: column; padding: 30px">
             <q class="desc">Menjadi program studi unggul di bidang komputasi cerdas yang berdaya saing di Indonesia
               bernafaskan nilai-nilai
               keislaman pada tahun 2030</q>
@@ -323,7 +322,7 @@
 
               color: #f8f8f8;
               border-radius: 50%;
-              background-color: #033E50;
+              background-color: #0082aa;
               padding: 10px 13px 10px 13px;
             }
           </style>
