--- a/index.html
+++ b/index.html
@@ -150,11 +150,12 @@
     <section class="about r-bg" style="background-color: #f8f8f8 !important;">
       <style>
         .r-bg {
-          background-image: url(assets/img/bg/iiisometric.svg); 
-          background-size: auto; 
-          background-position: center; 
+          background-image: url(assets/img/bg/iiisometric.svg);
+          background-size: auto;
+          background-position: center;
           background-repeat: no-repeat;
         }
+
         @media screen and (max-width: 768px) {
           .r-bg {
             background-image: none;
@@ -282,13 +283,141 @@
         stroke="none" stroke-width="0" fill="#0d47a1" fill-opacity="1"
         class="transition-all duration-300 ease-in-out delay-150 path-2" transform="rotate(-180 720 250)"></path>
     </svg>
+    <style>
+      .bg-svg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
 
+      .bg-svg>* {
+        height: 200px;
+        /* place at random */
+        transform: translate(calc(100vw * var(--x)), calc(100vh * var(--y)));
+      }
+
+      .bg-svg>:first-child {
+        --x: 0.5;
+        --y: 0.5;
+      }
+
+      .bg-svg>:nth-child(2) {
+        --x: 0.3;
+        --y: 0.5;
+      }
+
+      .bg-svg>:nth-child(3) {
+        --x: 0.7;
+        --y: 0.3;
+      }
+
+      .bg-svg>:nth-child(4) {
+        --x: 0.2;
+        --y: 0.2;
+      }
+
+      .bg-svg>:nth-child(5) {
+        --x: -0.4;
+        --y: 0.2;
+      }
+
+      .bg-svg>:nth-child(6) {
+        --x: -0.33;
+        --y: 0.4;
+      }
+      @media screen and (max-width: 768px) {
+        .bg-svg>* {
+          height: 100px;
+          /* place at random */
+          transform: translate(calc(100vw * var(--x)), calc(100vh * var(--y)));
+        }
+        
+      }
+    </style>
     <!-- bahasa -->
-    <section style="background-color: #f8f8f8;">
+    <section style="background-color: #f8f8f8; position: relative; overflow: hidden;">
+      <!-- svg bg -->
+      <div class="bg-svg">
+        <svg id="sw-js-blob-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="sw-gradient" x1="0" x2="1" y1="1" y2="0">
+              <stop id="stop1" stop-color="rgba(223, 237, 248, 1)" offset="0%"></stop>
+              <stop id="stop2" stop-color="rgba(223, 237, 248, 1)" offset="100%"></stop>
+            </linearGradient>
+          </defs>
+          <path fill="url(#sw-gradient)"
+            d="M9.9,-11.3C13.5,-3.4,17.5,0.8,17.3,4.9C17.1,9,12.7,13,5.7,19.2C-1.3,25.4,-10.7,33.7,-16.5,31.8C-22.2,30,-24.3,18,-23.2,9.2C-22.1,0.4,-17.8,-5.2,-13.4,-13.4C-9,-21.5,-4.5,-32.2,-0.7,-31.7C3.1,-31.1,6.3,-19.3,9.9,-11.3Z"
+            width="100%" height="100%" transform="translate(50 50)" stroke-width="0"
+            style="transition: all 0.3s ease 0s;" stroke="url(#sw-gradient)"></path>
+        </svg>
+        <svg id="sw-js-blob-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="sw-gradient" x1="0" x2="1" y1="1" y2="0">
+              <stop id="stop1" stop-color="rgba(223, 237, 248, 1)" offset="0%"></stop>
+              <stop id="stop2" stop-color="rgba(223, 237, 248, 1)" offset="100%"></stop>
+            </linearGradient>
+          </defs>
+          <path fill="url(#sw-gradient)"
+            d="M29,-23.8C32.5,-18.7,26.9,-6.9,23.3,4C19.7,14.9,18.3,24.9,13.6,26.4C9,28,1.1,21,-7.3,16.5C-15.8,11.9,-24.8,9.8,-29.3,3C-33.9,-3.9,-33.9,-15.5,-28.3,-21.1C-22.6,-26.7,-11.3,-26.3,0.7,-26.9C12.7,-27.5,25.5,-29,29,-23.8Z"
+            width="100%" height="100%" transform="translate(50 50)" stroke-width="0"
+            style="transition: all 0.3s ease 0s;" stroke="url(#sw-gradient)"></path>
+        </svg>
+        <svg id="sw-js-blob-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="sw-gradient" x1="0" x2="1" y1="1" y2="0">
+              <stop id="stop1" stop-color="rgba(223, 237, 248, 1)" offset="0%"></stop>
+              <stop id="stop2" stop-color="rgba(223, 237, 248, 1)" offset="100%"></stop>
+            </linearGradient>
+          </defs>
+          <path fill="url(#sw-gradient)"
+            d="M22.4,-23.1C28.4,-16.3,32.2,-8.2,31.7,-0.5C31.2,7.1,26.3,14.3,20.3,16.8C14.3,19.4,7.1,17.3,-1,18.3C-9.2,19.4,-18.3,23.4,-24.9,20.9C-31.5,18.3,-35.5,9.2,-34,1.5C-32.5,-6.1,-25.4,-12.3,-18.8,-19C-12.3,-25.7,-6.1,-33,1,-34C8.2,-35,16.3,-29.8,22.4,-23.1Z"
+            width="100%" height="100%" transform="translate(50 50)" stroke-width="0"
+            style="transition: all 0.3s ease 0s;" stroke="url(#sw-gradient)"></path>
+        </svg>
+        <svg id="sw-js-blob-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="sw-gradient" x1="0" x2="1" y1="1" y2="0">
+              <stop id="stop1" stop-color="rgba(223, 237, 248, 1)" offset="0%"></stop>
+              <stop id="stop2" stop-color="rgba(223, 237, 248, 1)" offset="100%"></stop>
+            </linearGradient>
+          </defs>
+          <path fill="url(#sw-gradient)"
+            d="M12.6,-14.1C18.9,-9.8,28.2,-8.2,29,-4.9C29.9,-1.6,22.2,3.4,17.8,9.5C13.3,15.5,12.1,22.6,8.2,25.1C4.4,27.6,-2,25.5,-10.3,24.2C-18.6,23,-28.8,22.8,-34.6,17.6C-40.5,12.4,-42.1,2.4,-39.7,-6.3C-37.3,-14.9,-31,-22.2,-23.7,-26.3C-16.5,-30.4,-8.2,-31.3,-2.5,-28.3C3.2,-25.3,6.4,-18.4,12.6,-14.1Z"
+            width="100%" height="100%" transform="translate(50 50)" stroke-width="0"
+            style="transition: all 0.3s ease 0s;" stroke="url(#sw-gradient)"></path>
+        </svg>
+        <svg id="sw-js-blob-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="sw-gradient" x1="0" x2="1" y1="1" y2="0">
+              <stop id="stop1" stop-color="rgba(223, 237, 248, 1)" offset="0%"></stop>
+              <stop id="stop2" stop-color="rgba(223, 237, 248, 1)" offset="100%"></stop>
+            </linearGradient>
+          </defs>
+          <path fill="url(#sw-gradient)"
+            d="M15.3,-10.1C20.9,1,27.4,10.3,25,17.1C22.6,24,11.3,28.5,1.2,27.7C-8.8,27,-17.6,21.1,-21.2,13.6C-24.7,6.1,-23,-3.1,-18.6,-13.5C-14.2,-23.8,-7.1,-35.3,-1.1,-34.6C4.8,-33.9,9.6,-21.1,15.3,-10.1Z"
+            width="100%" height="100%" transform="translate(50 50)" stroke-width="0"
+            style="transition: all 0.3s ease 0s;" stroke="url(#sw-gradient)"></path>
+        </svg>
+        <svg id="sw-js-blob-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="sw-gradient" x1="0" x2="1" y1="1" y2="0">
+              <stop id="stop1" stop-color="rgba(223, 237, 248, 1)" offset="0%"></stop>
+              <stop id="stop2" stop-color="rgba(223, 237, 248, 1)" offset="100%"></stop>
+            </linearGradient>
+          </defs>
+          <path fill="url(#sw-gradient)"
+            d="M13.5,-20.3C17.7,-15.5,21.4,-11.8,24.1,-7C26.7,-2.2,28.3,3.7,26.9,8.9C25.5,14.1,21.1,18.6,16.1,18.7C11.2,18.9,5.6,14.7,0.3,14.3C-5.1,13.9,-10.1,17.4,-17.5,18.1C-25,18.7,-34.7,16.6,-33.4,12.7C-32.1,8.9,-19.6,3.3,-16.9,-5.6C-14.1,-14.4,-21,-26.5,-19.8,-32.3C-18.7,-38.1,-9.3,-37.7,-2.3,-34.4C4.6,-31.2,9.3,-25.2,13.5,-20.3Z"
+            width="100%" height="100%" transform="translate(50 50)" stroke-width="0"
+            style="transition: all 0.3s ease 0s;" stroke="url(#sw-gradient)"></path>
+        </svg>
+      </div>
+      <!-- main c -->
       <div class="container"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="row">
-          <h2 style="color: #0d47a1; padding: 10px;">Bahasa Pemrograman yang dipelajari</h2>
+          <h2 style="color: #000000; padding: 10px;">Bahasa Pemrograman yang dipelajari</h2>
         </div>
         <div class="blobs-container">
           <!-- blob -->
