--- a/forkafest.html
+++ b/forkafest.html
@@ -49,15 +49,15 @@
 
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar">
+  <nav class="navbar" style="z-index: 999;">
     <div class="logo" style="margin-right: 30px;">
-      <a href="#" style="color: #0d47a1;">Your Logo</a>
+      <a href="#">Your Logo</a>
     </div>
     <ul class="nav-links">
-      <li><a href="#" style="color: #0d47a1;">Beranda</a></li>
-      <li><a href="#" style="color: #0d47a1;">Tentang kami</a></li>
-      <li><a href="#" style="color: #0d47a1;">Prestasi</a></li>
-      <li><a href="forkafest.html" style="color: #0d47a1;">Forkafest</a></li>
+      <li><a href="/">Beranda</a></li>
+      <li><a href="profil.html">Tentang kami</a></li>
+      <li><a href="prestasi.html">Prestasi</a></li>
+      <li><a href="forkafest.html">Forkafest</a></li>
     </ul>
     <div class="burger">
       <div class="line"></div>
